2026-top-it-main/lab5/examples/telegram-support-bot/k8s/optional/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: telegram-support-bot-gateway
  labels:
    app: telegram-support-bot
    component: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
